Initial portfolio setup

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     </header>
     <section>
         <h2>About Me</h2>
-        <p>Hi, I'm Srikanth Popuri, a Mechanical Engineering Master's student passionate about robotics, computer vision, and autonomous systems.</p>
+        <p>Hi, I’m Srikanth Popuri, a Master’s student in Mechanical Engineering with a deep passion for robotics, autonomous systems, and computer vision. My journey is driven by a curiosity to understand how machines perceive and interact with the world.
+
+            From designing autonomous robots to reconstructing 3D scenes using cutting-edge vision techniques, I thrive on solving challenging problems and pushing the boundaries of innovation. With expertise in Python, control systems, and mechatronics, I aim to create intelligent systems that seamlessly integrate hardware and software.
+            
+            When I’m not experimenting with algorithms or building robots, I enjoy exploring new technologies and sharing knowledge through teaching and collaboration.</p>
     </section>
     <section>
         <h2>Projects</h2>
