--- a/index.html
+++ b/index.html
@@ -73,10 +73,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
-                    </p>
+                       Driven by curiosity and a passion for problem-solving, collaboration, and creativity, my focus lies in bringing ideas to life through thoughtful design and execution. Whether it’s tackling complex challenges or refining solutions, every step of the journey is an opportunity to learn and grow.
+
+<br>The process of testing ideas, iterating on them, and celebrating the small wins along the way defines my approach to work. Beyond technical projects, a natural curiosity fuels the exploration of new technologies and creative ways to make a meaningful impact.</p>
                 </div>
             </div>
         </div>
