--- a/index.html
+++ b/index.html
@@ -176,8 +176,10 @@
                     <div class="project-info">
                         <h3>Computer Vision and Depth Estimation</h3>
                         <p>
-                            Implemented projects in 3D reconstruction, stereo depth estimation, and single-image depth generation. Developed pipelines combining neural networks and inpainting techniques for depth and occlusion handling. Specialized in U-Net models and advanced loss functions for precision in depth mapping                        <br><a href="#">Structure from Motion (SfM) – 3D Scene Reconstruction </a>
-                        <br><a href="#">Depth Estimation and Coded Image Simulation </a>
+                            Implemented projects in 3D reconstruction, stereo depth estimation, and single-image depth generation. Developed pipelines combining neural networks and inpainting techniques for depth and occlusion handling. Specialized in U-Net models and advanced loss functions for precision in depth mapping    
+                            <a href="#">Depth Estimation and Multi-Angle View Synthesis using Generative AI </a>                    
+                            <br><a href="#">Structure from Motion (SfM) – 3D Scene Reconstruction </a>
+                            <br><a href="#">Depth Estimation and Coded Image Simulation </a>
 
                     </div>
                     <!-- End .project-info -->
