--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                         <h3>Computer Vision and Depth Estimation</h3>
                         <p>
                             Implemented projects in 3D reconstruction, stereo depth estimation, and single-image depth generation. Developed pipelines combining neural networks and inpainting techniques for depth and occlusion handling. Specialized in U-Net models and advanced loss functions for precision in depth mapping    
-                            <br><a href="projectpage.html">Depth Estimation and Multi-Angle View Synthesis using Generative AI </a>                    
-                            <br><a href="#">Structure from Motion (SfM) – 3D Scene Reconstruction </a>
+                            <br><a href="mutliview.html">Depth Estimation and Multi-Angle View Synthesis using Generative AI </a>                    
+                            <br><a href="3dreconstruction.html">Structure from Motion (SfM) – 3D Scene Reconstruction </a>
                             <br><a href="#">Depth Estimation and Coded Image Simulation </a>
 
                     </div>
