--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Srikanth popuri</h1>
             <h2>Master's student in Mechanical Engineering</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="resume/resume_software (2).pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -94,13 +94,24 @@
                 </p>
             </div>
 
+            <div data-date="jan 2024 – May 2024">
+                <h3>University of Colorado Boulder</h3>
+                <h4>Research Assistant</h4>
+                <p>
+                    Contributed to a ROS-based solution enabling a Franka Emika Panda robot to perform manipulation tasks despite locked multi-joint failures
+                    ,Co-authored a publication, "Exploring How Non-Prehensile Manipulation Expands Capability in Robots Experiencing Multi-Joint Failure," in IROS.
+                </p>
+            </div>
+
             <div data-date="Nov 2021 – Jun 2023">
                 <h3>Cognizant</h3>
                 <h4>Junior Software Engineer </h4>
                 <p>
-                    Reviewed Android applications to ensure compliance with Play Store policies and detect potential security risks, including spyware.
-                     Collaborated with a major tech client to refine a natural language processing bot, improving its responses to prevent
-                    the dissemination of harmful content
+                    Contributed to the development of IoT-enabled applications with backend services designed
+for data exchange between cloud platforms and edge devices using Java and Spring Boot ,Containerized services using Docker to enable scalable deployment across IoT gateways and edge
+nodes, simulating industrial automation and robotics use cases.
+
+
                 </p>
             </div>
 
@@ -118,7 +129,7 @@
             <h4>Master of Science in Mechanical Engineering </h4>
             <ul>
                 <li>
-                GPA: 3.73
+                GPA: 3.8
             </li>
             <li>
                 Relevant Coursework: Feedback Control, Engineering Analysis, Control System Lab, Advanced Robotics, Mechatronics,
@@ -160,9 +171,9 @@
                         <h3>Robotics and Autonomous Systems</h3>
                         <p>
                             Developed robotic systems leveraging advanced sensor integration and state estimation techniques. Built a Mecanum wheel robot using optical flow for localization and EKF for sensor fusion. Innovated tracking solutions by repurposing hardware like the Logitech B100 mouse                        </p>
-                        <a href="#">Design and Implementation of an Autonomous Combat Robot</a>
-                        <br><a href="#">Tracking Device with Raspberry Pi Camera (Mechatronics Project)</a>
-                        <br><a href="#">Autonomous Driving and Robotics (ADR) – LIDAR-Based Localization and Navigation</a>
+                        <a href="Autonomous Balloon-Popping Robot.html">Design and Implementation of an Autonomous Combat Robot</a>
+                        <br><a href="#">Sensor Fusion for Real-Time Localization</a>
+                        <br><a href="Autonomous Racing Vehicle.html">Autonomous Driving and Robotics (ADR) – LIDAR-Based Localization and Navigation</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -179,7 +190,7 @@
                             Implemented projects in 3D reconstruction, stereo depth estimation, and single-image depth generation. Developed pipelines combining neural networks and inpainting techniques for depth and occlusion handling. Specialized in U-Net models and advanced loss functions for precision in depth mapping    
                             <br><a href="mutliview.html">Depth Estimation and Multi-Angle View Synthesis using Generative AI </a>                    
                             <br><a href="3dreconstruction.html">Structure from Motion (SfM) – 3D Scene Reconstruction </a>
-                            <br><a href="#">Depth Estimation and Coded Image Simulation </a>
+                            <br><a href="Coded Deep Depth Estimation.html">Monocular Depth Extimation From Coded Images</a>
 
                     </div>
                     <!-- End .project-info -->
@@ -194,7 +205,7 @@
                     <h3>Mechanical Systems and Simulation</h3>
                     <p>
                         Designed and simulated mechanical systems, focusing on ball screw drives and compliance mechanisms. Modeled linear actuators and conducted dynamic analyses with finite element methods. Completed high-fidelity system identification for actuator dynamics.                    </p>
-                    <a href="#">Linear Actuator Modeling with Ball Screw Drive in Abaqus </a>
+                    <a href="#">Ball Screw Drive system </a>
                     <br><a href="#">GUI Simulation and Automation of a Parallel Manipulator </a>
                     <br><a href="#">BAJA SAE India</a>
 
