--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ nodes, simulating industrial automation and robotics use cases.
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+                        Copyright &copy; <span id="current-year">2022</span> Srikanth Popuri
                     </p>
                 </div>
                 <div class="col-sm-2 top">
