--- a/index.html
+++ b/index.html
@@ -168,12 +168,13 @@ nodes, simulating industrial automation and robotics use cases.
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
+                        
                         <h3>Robotics and Autonomous Systems</h3>
-                        <p>
-                            Developed robotic systems leveraging advanced sensor integration and state estimation techniques. Built a Mecanum wheel robot using optical flow for localization and EKF for sensor fusion. Innovated tracking solutions by repurposing hardware like the Logitech B100 mouse                        </p>
-                        <a href="Autonomous Balloon-Popping Robot.html">Design and Implementation of an Autonomous Combat Robot</a>
-                        <br><a href="#">Sensor Fusion for Real-Time Localization</a>
-                        <br><a href="Autonomous Racing Vehicle.html">Autonomous Driving and Robotics (ADR) – LIDAR-Based Localization and Navigation</a>
+                        <ul>
+                            <li><a href="Autonomous Balloon-Popping Robot.html">Design and Implementation of an Autonomous Combat Robot</a></li>
+                        <!-- <li><a href="#">Sensor Fusion for Real-Time Localization</a></li>-->
+                            <li><a href="Autonomous Racing Vehicle.html">Autonomous Driving and Robotics (ADR) – LIDAR-Based Localization and Navigation</li>
+                        </ul>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -186,12 +187,11 @@ nodes, simulating industrial automation and robotics use cases.
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Computer Vision and Depth Estimation</h3>
-                        <p>
-                            Implemented projects in 3D reconstruction, stereo depth estimation, and single-image depth generation. Developed pipelines combining neural networks and inpainting techniques for depth and occlusion handling. Specialized in U-Net models and advanced loss functions for precision in depth mapping    
-                            <br><a href="mutliview.html">Depth Estimation and Multi-Angle View Synthesis using Generative AI </a>                    
-                            <br><a href="3dreconstruction.html">Structure from Motion (SfM) – 3D Scene Reconstruction </a>
-                            <br><a href="Coded Deep Depth Estimation.html">Monocular Depth Extimation From Coded Images</a>
-
+                        <ul>
+                            <li><a href="mutliview.html">Depth Estimation and Multi-Angle View Synthesis using Generative AI </a></li>                    
+                            <li><a href="3dreconstruction.html">Structure from Motion (SfM) – 3D Scene Reconstruction </a></li>
+                            <li><a href="Coded Deep Depth Estimation.html">Monocular Depth Extimation From Coded Images</a></li>
+                            </ul>
                     </div>
                     <!-- End .project-info -->
                     
@@ -203,11 +203,11 @@ nodes, simulating industrial automation and robotics use cases.
                 <!-- End .project-image -->
                 <div class="project-info">
                     <h3>Mechanical Systems and Simulation</h3>
-                    <p>
-                        Designed and simulated mechanical systems, focusing on ball screw drives and compliance mechanisms. Modeled linear actuators and conducted dynamic analyses with finite element methods. Completed high-fidelity system identification for actuator dynamics.                    </p>
-                    <a href="#">Ball Screw Drive system </a>
-                    <br><a href="#">GUI Simulation and Automation of a Parallel Manipulator </a>
-                    <br><a href="#">BAJA SAE India</a>
+                    <ul>
+                    <li><a href="#">Ball Screw Drive system </a></li>
+                    <li><a href="#">GUI Simulation and Automation of a Parallel Manipulator </a></li>
+                    <li><a href="#">BAJA SAE India</a></li>
+                    </ui>
 
                 </div>
         </div>
