--- a/mutliview.html
+++ b/mutliview.html
@@ -56,12 +56,18 @@
             overflow-x: auto;
         }
 
+        .code-link {
+            margin-top: 1rem;
+            text-align: left;
+        }
+        .code-link a {
+            color: #007BFF;
+            text-decoration: none;
+        }
         footer {
             text-align: center;
-            padding: 20px;
-            background-color: #4d4d4d;
-            color: white;
-            margin-top: 20px;
+            margin-top: 2rem;
+            font-size: 0.9rem;
         }
     </style>
 </head>
@@ -161,7 +167,7 @@
         </section>
         
         <div class="code-link">  
-            <p><a href="https://colab.research.google.com/drive/1NHcITB0KhKx2hZEtSGGaK5_D1Ur1FlaU#scrollTo=UP0yhwwZmE2X" target="_blank" >google colab</a></p>
+            <p><a href="https://colab.research.google.com/drive/1NHcITB0KhKx2hZEtSGGaK5_D1Ur1FlaU#scrollTo=UP0yhwwZmE2X" target="blank" >google colab</a></p>
             <p><a href="multiview_images/MCEN_5228_ACV_Project_4 (1).pdf" download>Technical Document</a></p>
         </div>    
         
