--- a/Autonomous Racing Vehicle.html
+++ b/Autonomous Racing Vehicle.html
@@ -38,7 +38,7 @@
         }
         .code-link {
             margin-top: 1rem;
-            text-align: center;
+            text-align: left;
         }
         .code-link a {
             color: #007BFF;
