--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
     <!-- End #mobile-menu-toggle -->
     <header>
         <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-3">
         <div  style="text-align:left; height: 100%;overflow-y: auto;box-shadow: none;border-radius: 0;width: 100%;">
-        <a href="#lead"><h1 style="margin :0px;padding:0px">Srikanth Popuri</h1><p style="margin :0px;padding:0px">Mechanical Engineer</p></a>
+            
+        <a href="#lead"><h1 style="margin :0px;padding:0px">Srikanth Popuri</h1><p style="margin :0px;padding:0px">Mechanical Engineer</p></a>  
+        <a href="https://github.com/srikanth-444" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/srikanth-popuri-3649a01a2/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>         
+        </div>
+        </div>
         
-        </div>
-        </div>
-        <div class="col-md-8">
+        <div class="col-md-9">
         <div id="mobile-menu-close">
             <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
