--- a/index.html
+++ b/index.html
@@ -282,11 +282,11 @@ nodes, simulating industrial automation and robotics use cases.
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/srikanth-444" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                        
                         <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/srikanth-popuri-3649a01a2/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                        
                     </ul>
