--- a/index.html
+++ b/index.html
@@ -317,21 +317,21 @@ nodes, simulating industrial automation and robotics use cases.
 
     
 
-    <!-- <div id="contact">
+    <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/f/mkgraolp">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
                 <button type="submit">Send</button>
             </form>
         </div>
-       End #contact-form -->
-    <!-- </div>
-    End #contact --> 
+       <!-- End #contact-form -->
+    </div>
+    <!-- End #contact   -->
 
-    <!-- <footer>
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col-sm-5 copyright">
@@ -358,7 +358,7 @@ nodes, simulating industrial automation and robotics use cases.
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
     <!-- End footer -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
