--- a/index.html
+++ b/index.html
@@ -89,13 +89,8 @@
                   <a class="nav-link text-white" href="#education">Education</a>
                 </li>
                 <li class="nav-item d-none d-md-inline">
-                  <a class="nav-link text-white" href="https://github.com/srikanth-444" target="_blank">
-                    <i class="fa fa-github"></i>
-                  </a>
-                </li>
-                <li class="nav-item d-none d-md-inline">
-                  <a class="nav-link text-white" href="https://www.linkedin.com/in/srikanth-popuri-3649a01a2/" target="_blank">
-                    <i class="fa fa-linkedin"></i>
+                  <a class="nav-link text-white" href="#contact">Contact</a>
+                  
                   </a>
                 </li>
               </ul>
@@ -317,7 +312,7 @@ nodes, simulating industrial automation and robotics use cases.
 
     
 
-    <div id="contact">
+    <div id="contact" class="section-box">
         <h2>Get in Touch</h2>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/f/mkgraolp">
