--- a/index.html
+++ b/index.html
@@ -210,12 +210,12 @@ nodes, simulating industrial automation and robotics use cases.
                 <div class="project shadow-large col-sm-4 ">
                     <div class ="row">
                     <div class="project-image">
-                        <img src="baloon_popping/cropped.jpg" width=100% />
+                        <img src="baloon_popping/robot front.jpg" width=100% />
                     </div>
                     <!-- End .project-image -->
                     <div class=" project-info">
 
-                        <a href="Autonomous Balloon-Popping Robot.html"><h2>Ballon Pooper</h2></a>
+                        <a href="Autonomous Balloon-Popping Robot.html"><h2>Ballon Popper</h2></a>
                         <h3>popping Opposition ballons</h3>
                     </div>
                     </div>
@@ -225,7 +225,7 @@ nodes, simulating industrial automation and robotics use cases.
 
                 <div class="project shadow-large col-sm-4 ">
                     <div class="project-image">
-                        <img src="multiview_images/cropped.png" width=100% />
+                        <img src="multiview_images/depth_multiview.gif" width=100% />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
